objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Tenure_Based_Bonus__c</fullName>
        <formula>Amount
   *
((YEAR(TODAY()) - YEAR(Owner.Start_Date__c)) / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenure Based Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1000_Kicker_for_Large_Opps__c</fullName>
        <formula>IF(Amount&gt;100000, 1000, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$1000 Kicker for Large Opps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X500_Flat_Bonus__c</fullName>
        <formula>500</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$500 Flat Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>